--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@types/mongoose": "^5.11.97",
     "@types/passport-jwt": "^3.0.6",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "dotenv": "^10.0.0",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
