--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/mongoose": "^8.0.0",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/typeorm": "^8.0.2",
     "@types/mongoose": "^5.11.97",
     "@types/passport-jwt": "^3.0.6",
     "bcrypt": "^5.0.1",
@@ -35,12 +36,14 @@
     "dotenv": "^10.0.0",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.10",
     "mongoose": "^5.13.5",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "typeorm": "^0.2.37"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
