--- a/.env.stage.dev-example
+++ b/.env.stage.dev-example
@@ -1,5 +1,18 @@
-DB_HOST=HOSTNAME
-DB_PORT=PORT
-DB_NAME=NAME
-JWT_SECRET=SECRET
-APP_PORT=PORT
+# General config
+NODE_ENV=
+APP_PORT=
+
+# Database config
+DB_HOST=
+DB_PORT=
+DB_NAME=
+
+# JWT
+JWT_SECRET=
+JWT_EXPIRES_FOR_EMAIL=
+
+# SMTP 
+SMTP_USER=
+SMTP_USER_PASS=
+FROM_MAIL_ID=
+SMTP_PORT=
