--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "dotenv": "^10.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.10",
+    "mysql2": "^2.3.3",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
