--- a/package.json
+++ b/package.json
@@ -30,13 +30,17 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.0.9",
     "@nestjs/typeorm": "^8.0.2",
+    "@types/multer": "^1.4.7",
     "@types/passport-jwt": "^3.0.6",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "dotenv": "^10.0.0",
+    "json-2-csv": "^3.15.1",
+    "json2csv": "^5.0.6",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.10",
+    "papaparse": "^5.3.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
@@ -53,7 +57,6 @@
     "@types/express": "^4.17.13",
     "@types/hapi__joi": "^17.1.7",
     "@types/jest": "^26.0.24",
-    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
@@ -63,7 +66,6 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "jest": "27.0.6",
-    "papaparse": "^5.3.1",
     "prettier": "^2.3.2",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
